# prospectivaTecno

./: .env.example  .gitignore  .graphifyignore  CHECKLIST_DEPLOY.md  COMANDOS.md  DEPLOY_DOCS.md  DEPLOY_INSTRUCTIONS.md  GUIA_PRUEBA.md  INICIO_RAPIDO.md  MODELOS_Y_CASOS.md  PRD.md  QUICK_DEPLOY.sh  README.md  RESUMEN_PROYECTO.md  SETUP.md  client.py  index.html  package-lock.json  pyproject.toml  server.py  start.sh  vite.config.js
ROS2-SIM/: GUIA_SIMULACION.md  README.md  SIMULATION_SETUP.md  setup_sim.sh  sim_robot_controller.py  test_sim_connection.py
arquitectura-v2/: index.html
assets/: index-c8c4d8f7.css  index-d3283bb1.js
config/: commands.yaml
docs/: Gemfile  README.md  _config.yml  (+9 more)
proyecto-final/: README.md  TELEMETRY_README.md  demo_telemetry.py  pyproject.toml  robot_telemetry.py  robot_tools.py  robot_voice_controller.py  telemetry_dashboard.py  telemetry_demo.py  test_connection.py  voice_to_robot.py
proyecto-final/docs/: DEMO_RAPIDA.md  FLUJO_COMPLETO.md  GUIA_CONEXION_ROBOT.md  GUIA_RAPIDA.md  diagram.excalidraw
proyecto-final/slides/: README.md  index.html  package-lock.json  package.json  resumen  vite.config.js
proyecto-final/slides/src/: App.jsx  index.css
proyecto-final/slides/src/slides/: AgenteSlide.jsx  AntiFeedbackSlide.jsx  ArquitecturaSlide.jsx  ConclusionesSlide.jsx  DesafiosSlide.jsx  EstadoSlide.jsx  MetricasSlide.jsx  NavegacionSlide.jsx  ObjetivoSlide.jsx  PerformanceSlide.jsx  PipelineSlide.jsx  RobotSlide.jsx  TitleSlide.jsx
proyecto-final/tests/: test_llm.py  test_robot_commands.py  test_sequence.py  test_whisper.py
(+198 files in other folders)
