[project]
name = "whisper-poc"
version = "0.1.0"
description = "Whisper POC for testing local model"
requires-python = ">=3.9"
dependencies = [
    "openai-whisper>=20231117",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "sounddevice>=0.4.6",
    "scipy>=1.10.0",
    "ollama>=0.4.0",
    "unitree-webrtc-connect>=0.1.0",
]
